--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@taquito/taquito": "^6.3.0-wallet.4",
+    "@taquito/tezbridge-signer": "^6.3.0-wallet.4",
     "body-parser": "^1.19.0",
     "browserify": "^16.5.1",
     "conseiljs": "^0.4.1",
