--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start":"node index.js",
+    "devStart":"nodemon index.js",
     "build": "browserify index.js -o bundle.js"
   },
   "author": "",
@@ -20,5 +22,9 @@
     "express": "^4.17.1",
     "nodemon": "^2.0.3",
     "tezbridge-crypto": "^1.0.59"
+  },
+  "engines":{
+    "node":"^13.12.0",
+    "npm":"^6.9.0"
   }
 }
